k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biehlerjosef
spec:
  selector:
    matchLabels:
      app: biehlerjosef
  template:
    metadata:
      labels:
        app: biehlerjosef
    spec:
      containers:
      - name: biehlerjosef
        image: ghcr.io/gabbersepp/biehler-josef
        imagePullPolicy: Always
        ports:
        - containerPort: 80
