k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biehlerjosef-service
spec:
  selector:
    app: biehlerjosef
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
