k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biehlerjosef-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - biehler-josef.de
    secretName: microbot-ingress-tls
  rules:
  - host: biehler-josef.de
    http:
      paths:
      - path: /
        backend:
          service:
            name: biehlerjosef-service
            port: 
              number: 80
  - host: www.biehler-josef.de
    http:
      paths:
      - path: /
        backend:
          service:
            name: biehlerjosef-service
            port: 
              number: 80
